syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dex/params.proto";
import "dex/long_book.proto";
import "dex/short_book.proto";
import "dex/settlement.proto";
import "dex/enums.proto";
import "dex/price.proto";
import "dex/twap.proto";
import "dex/asset_list.proto";
import "dex/pair.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/dex/params";
  }
  // Queries a LongBook by id.
	rpc LongBook(QueryGetLongBookRequest) returns (QueryGetLongBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/long_book/{contractAddr}/{priceDenom}/{assetDenom}/{price}";
	}

	// Queries a list of LongBook items.
	rpc LongBookAll(QueryAllLongBookRequest) returns (QueryAllLongBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/long_book/{contractAddr}/{priceDenom}/{assetDenom}";
	}

// Queries a ShortBook by id.
	rpc ShortBook(QueryGetShortBookRequest) returns (QueryGetShortBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/short_book/{contractAddr}/{priceDenom}/{assetDenom}/{price}";
	}

	// Queries a list of ShortBook items.
	rpc ShortBookAll(QueryAllShortBookRequest) returns (QueryAllShortBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/short_book/{contractAddr}/{priceDenom}/{assetDenom}";
	}

	rpc SettlementsAll(QueryAllSettlementsRequest) returns (QueryAllSettlementsResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/settlement";
	}

	rpc GetPrices(QueryGetPricesRequest) returns (QueryGetPricesResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_prices/{contractAddr}/{priceDenom}/{assetDenom}";
	}

	rpc GetTwaps(QueryGetTwapsRequest) returns (QueryGetTwapsResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_twaps/{contractAddr}/{lookbackSeconds}";
	}

	// Returns the metadata for a specified denom / display type
	rpc AssetMetadata(QueryAssetMetadataRequest) returns (QueryAssetMetadataResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/asset_list/{denom}";
	}

	// Returns metadata for all the assets
	rpc AssetList(QueryAssetListRequest) returns (QueryAssetListResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/asset_list";
	}

	// Returns all registered pairs for specified contract address
	rpc GetRegisteredPairs(QueryRegisteredPairsRequest) returns (QueryRegisteredPairsResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/asset_list";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetLongBookRequest {
	string price = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryGetLongBookResponse {
	LongBook LongBook = 1 [(gogoproto.nullable) = false];
}

message QueryAllLongBookRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryAllLongBookResponse {
	repeated LongBook LongBook = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetShortBookRequest {
	string price = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryGetShortBookResponse {
	ShortBook ShortBook = 1 [(gogoproto.nullable) = false];
}

message QueryAllShortBookRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryAllShortBookResponse {
	repeated ShortBook ShortBook = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSettlementsRequest {
	string contractAddr = 1;
	uint64 blockHeight = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryGetSettlementsResponse {
	Settlements Settlements = 1 [(gogoproto.nullable) = false];
}

message QueryAllSettlementsRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSettlementsResponse {
	repeated Settlements Settlements = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPricesRequest {
  string priceDenom = 1;
  string assetDenom = 2;
  string contractAddr = 3;
}

message QueryGetPricesResponse {
	repeated Price prices = 1;
}

message QueryGetTwapsRequest {
	string contractAddr = 1 [
		(gogoproto.jsontag) = "contract_address"
	];
	uint64 lookbackSeconds = 2 [
		(gogoproto.jsontag) = "lookback_seconds"
	];
  }

message QueryGetTwapsResponse {
	repeated Twap twaps = 1 [
		(gogoproto.jsontag) = "twaps"
	];
}

message QueryAssetListRequest {}

message QueryAssetListResponse {
	repeated AssetMetadata assetList = 1 [(gogoproto.nullable) = false];
}

message QueryAssetMetadataRequest {
	string denom = 1;
}

message QueryAssetMetadataResponse {
	AssetMetadata metadata = 1;
}

message QueryRegisteredPairsRequest {
	string contractAddr = 1 [
		(gogoproto.jsontag) = "contract_address"
	];
}

message QueryRegisteredPairsResponse {
	repeated Pair pairs = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
